[gd_scene load_steps=2 format=3 uid="uid://cld8frqa68rug"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_pause_script"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pause_script")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PauseLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.91, 0.91, 0.91, 1)
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "RESUME"

[node name="MainMenuButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "QUIT"

[connection signal="pressed" from="MenuContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MenuContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MenuContainer/QuitButton" to="." method="_on_quit_pressed"]
